[package]
name = "mdbook-blacksmith"
version = "0.1.0"
edition = "2018"
description = "A mdbook preprocessor for generating dynamic content for Rust Forge."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
regex = "1.4.6"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"

[dependencies.clap]
version = "2.33.3"
default-features = false

[dependencies.mdbook]
version = "=0.4.8"
default-features = false
features = ["search"]
