[package]
name = "mdbook-blacksmith"
version = "0.1.0"
edition = "2018"
description = "A mdbook preprocessor for generating dynamic content for Rust Forge."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
toml = "0.5.8"

[dependencies.clap]
version = "3.0.7"
default-features = false

[dependencies.mdbook]
version = "=0.4.12"
default-features = false
features = ["search"]
