[package]
name = "mdbook-blacksmith"
version = "0.1.0"
edition = "2021"
description = "A mdbook preprocessor for generating dynamic content for Rust Forge."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"

[dependencies.mdbook]
version = "0.4.35"
default-features = false
features = ["search"]
